--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                                     <input type="number" placeholder="Enter Your Number"><br>
                                     <P>GENDER</P>
                                     
-                                       <input type="radio" value="Male">
+                                       <input type="radio" value="Male" name="Gender">
                                        <label for="GENDER">Male</label>
-                                       <input type="radio" value="Female">
+                                       <input type="radio" value="Female" name="Gender">
                                        <label for="GENDERr">Female</label>
-                                       <input type="radio" value="Other">
+                                       <input type="radio" value="Other" name+="Gender">
                                        <label for="GENDER">Other</label><br><br>
                                        <label>EMAIL</label><BR>
                                        <input type="email" placeholder="Enter Your Email"><BR><BR>
