--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                        <label for="GENDER">Male</label>
                                        <input type="radio" value="Female" name="Gender">
                                        <label for="GENDERr">Female</label>
-                                       <input type="radio" value="Other" name+="Gender">
+                                       <input type="radio" value="Other" name="Gender">
                                        <label for="GENDER">Other</label><br><br>
                                        <label>EMAIL</label><BR>
                                        <input type="email" placeholder="Enter Your Email"><BR><BR>
