--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                        <input type="radio" value="Male" name="Gender">
                                        <label for="GENDER">Male</label>
                                        <input type="radio" value="Female" name="Gender">
-                                       <label for="GENDERr">Female</label>
+                                       <label for="GENDER">Female</label>
                                        <input type="radio" value="Other" name="Gender">
                                        <label for="GENDER">Other</label><br><br>
                                        <label>EMAIL</label><BR>
