--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                                        <label for="GENDER">Male</label>
                                        <input type="radio" value="Female" name="Gender">
                                        <label for="GENDER">Female</label>
-                                       <input type="radio" value="Other" name="Gender">
-                                       <label for="GENDER">Other</label><br><br>
+                                       <input type="radio" value="Prefer not to say" name="Gender">
+                                       <label for="GENDER">Prefer not to say</label><br><br>
                                        <label>EMAIL</label><BR>
                                        <input type="email" placeholder="Enter Your Email"><BR><BR>
                                         <label>PASSWORD</label><BR>
