--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>
             Form!</title>
     </head>
     <body>
+        <center>
         <h1>STUDENT REGISTRATION FORM</h1>
         <FORM>
+        
             <label>NAME</label>
             <br>
             <input type="text" placeholder="Enter Your Name"><BR><BR>
@@ -27,7 +30,7 @@
                             <option value="DSA">DSA</option>
                             <option value="C">C</option>
                             <option value="C++">C++</option>
-                            <option value="PYTHON">PHTHON</option>
+                            <option value="PYTHON">PYTHON</option>
                         </select>
                         <br><br>
                         <label>DATE OF BIRTH</label><BR>
@@ -56,5 +59,6 @@
                                                             <P>FILE--<input type="file"></P><BR>
                                                                 <input type="submit">
         </FORM>
+        </center>
     </body>
 </html>
